reload command (#84)
